tests/compile_fail/invalid_track_repeat_zero_count.rs
use surgeist_style::TrackRepeatCount;

fn main() {
    let _count = TrackRepeatCount::Count(0);
}
