tests/compile_fail/invalid_track_repeat_zero_count.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_track_repeat_zero_count.rs:4:42
  |
4 |     let _count = TrackRepeatCount::Count(0);
  |                  ----------------------- ^ expected `TrackRepeatCountValue`, found integer
  |                  |
  |                  arguments to this enum variant are incorrect
  |
note: tuple variant defined here
 --> src/value.rs
  |
  |     Count(TrackRepeatCountValue),
  |     ^^^^^
